--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-table {
-  border-style: solid;
+td {
+  border-style: ridge;
 }
 
 tr {
-  border-style: solid;
-  border-width: 5px;
+  border-style: ridge;
 }
