--- a/style_sheet/style.css
+++ b/style_sheet/style.css
@@ -5,8 +5,13 @@
   color: #191f1d;
 }
 
-#head1 {
+#head2 {
   font-family: Helvetica, sans-serif;
+  color: #25705A;
+}
+
+#head3 {
+  font-family: Georgia, serif;
   color: #25705A;
 }
 
